# hexes

./: .ghci  LICENSE.txt  README.md  cabal.config  hexes.cabal  stack.yaml
app/: Main.hs
font-data/: notes.md
src/: Hexes.hs
src/Hexes/: Internal.hs  InternalOld.hs
src/Hexes/Internal/: GLFW.hs  Shader.dump-splices  Shader.hs  Types.dump-splices  Types.hs  TypesBackup.hs
