name:                hexes
version:             0.0.1
homepage:            https://github.com/Lokathor/hexes
license:             MIT
license-file:        LICENSE.txt
author:              Lokathor
maintainer:          zefria@gmail.com
copyright:           2017 Daniel Gee
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- Assumes Stackage LTS 8.13 or later.

library
    hs-source-dirs:     src
    exposed-modules:    Hexes
    build-depends:      base,
                        gl,
                        GLFW-b,
                        raw-strings-qq,
                        transformers,
                        JuicyPixels,
                        vector,
                        linear,
                        containers
    default-language:   Haskell2010

executable demo
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      base,
                        hexes,
                        gl,
                        GLFW-b,
                        raw-strings-qq,
                        transformers,
                        JuicyPixels,
                        vector,
                        linear,
                        containers
    default-language:   Haskell2010
    -- ghc-options:        -O2
    -- ghc-options:        -optl-mwindows
