name:                hexes
version:             0.0.1
homepage:            https://github.com/Lokathor/hexes
license:             MIT
license-file:        LICENSE.txt
author:              Lokathor
maintainer:          zefria@gmail.com
copyright:           2017 Daniel Gee
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- Assumes Stackage LTS 8.13 or later.

library
    hs-source-dirs:     src
    exposed-modules:    Hexes
    other-modules:      Hexes.Internal,
                        Hexes.Internal.Types,
                        Hexes.Internal.GLFW,
                        Hexes.Internal.Shader
    build-depends:      base,
                        gl,
                        GLFW-b,
                        raw-strings-qq,
                        transformers,
                        JuicyPixels,
                        vector,
                        linear,
                        containers,
                        bytestring,
                        storable-tuple,
                        microlens,
                        microlens-th
    default-language:   Haskell2010
    other-extensions:   GeneralizedNewtypeDeriving,
                        QuasiQuotes,
                        TemplateHaskell
    ghc-options:        -ddump-splices  -ddump-to-file

executable demo
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      base,
                        hexes,
                        bytestring,
                        JuicyPixels
    default-language:   Haskell2010
    -- ghc-options:        -ddump-splices  -ddump-to-file
    -- ghc-options:        -O2
    -- ghc-options:        -optl-mwindows
